Wanted Sans 폰트 적용 - sans-serif 폰트들을 Wanted Sans Variable로 교체

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,11 @@
 
 <link rel="icon" href="{{ site.baseurl }}/assets/images/logo.png">
 
+<!-- Wanted Sans Font -->
+<link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin="anonymous" />
+<link rel="preload" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/wanteddev/wanted-sans@v1.0.3/packages/wanted-sans/fonts/webfonts/variable/split/WantedSansVariable.min.css" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/wanteddev/wanted-sans@v1.0.3/packages/wanted-sans/fonts/webfonts/variable/split/WantedSansVariable.min.css" />
+
 <title>{{ page.title }} | {{site.name}}</title>
 
 {% seo %}
