--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -45,7 +45,7 @@ permalink: "/categories.html"
                     </div>
                     
                     <div class="mt-auto">
-                        <a href="/category/{{ category[0] | slugify }}/" class="btn btn-outline-primary btn-sm">
+                        <a href="{{ site.baseurl }}/category/{{ category[0] | slugify }}/" class="btn btn-outline-primary btn-sm">
                             View All Posts <i class="fas fa-arrow-right"></i>
                         </a>
                     </div>
