fix/update layout

--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -3,10 +3,14 @@ layout: default
 title: 아카이브
 ---
 
-<!-- Featured Section for Category -->
-<div class="featured-box">
-    <h1 class="page-title">{{ page.title }}</h1>
-    <p><strong>{{ page.title }}</strong> 카테고리의 글 모음</p>
+<!-- Category Header -->
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h1 class="page-title">{{ page.title }}</h1>
+            <p class="lead"><strong>{{ page.title }}</strong> 카테고리의 글 모음</p>
+        </div>
+    </div>
 </div>
 
 <!-- Begin List Posts
