--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -4,10 +4,14 @@ layout: default
 permalink: "/categories.html"
 ---
 
-<!-- Featured Section -->
-<div class="featured-box">
-    <h1 class="page-title">Categories</h1>
-    <p>Explore all posts categorized by topics and categories.</p>
+<!-- Categories Header -->
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h1 class="page-title">Categories</h1>
+            <p class="lead">Explore all posts categorized by topics and categories.</p>
+        </div>
+    </div>
 </div>
 
 <!-- Category Cards Overview -->
