--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,11 +68,11 @@ ga('send', 'pageview');
 ================================================== -->
 <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top mediumnavigation nav-down" style="border-bottom:1px solid var(--border-light);box-shadow:none;">
 
-    <div class="container pr-0">
+    <div class="container pr-0" style="padding-left: 0 !important; padding-right: 0 !important;">
 
     <!-- Begin Logo -->
     <a class="navbar-brand" href="{{ site.baseurl }}/">
-    <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}">
+    Seonghu Jeon
     </a>
     <!-- End Logo -->
 
